Fix asterisk wrapping in the checkox field labels

--- a/css/compat/themes/compat-diza-rtl-319-beta-1.css
+++ b/css/compat/themes/compat-diza-rtl-319-beta-1.css
@@ -20,6 +20,14 @@ body.theme-diza div.woocommerce form .form-row .input-checkbox {
   display: none;
 }
 
+body.theme-diza div.woocommerce form .form-row label.checkbox {
+  display: block;
+}
+
+body.theme-diza div.woocommerce form .form-row .woocommerce-form__input + span {
+  display: inline;
+}
+
 body.theme-diza .fc-content form.woocommerce-checkout {
   padding: 0;
 }
